RESOLVED FIXED167334
JSArray::tryCreateUninitialized should be called JSArray::tryCreateForInitializationPrivate
https://bugs.webkit.org/show_bug.cgi?id=167334
Summary JSArray::tryCreateUninitialized should be called JSArray::tryCreateForInitial...
Filip Pizlo
Reported 2017-01-23 15:29:23 PST
Or something that conveys: - It tries to create the array. - It's for initialization (doesn't require realloc to initialize up to the provided length) - It's private to JSArray.
Attachments
Patch for Landing (11.43 KB, patch)
2017-01-24 12:52 PST, Michael Saboff
no flags
Filip Pizlo
Comment 1 2017-01-23 15:29:44 PST
rs=me
Michael Saboff
Comment 2 2017-01-24 12:52:10 PST
Created attachment 299618 [details] Patch for Landing
Michael Saboff
Comment 3 2017-01-24 13:56:19 PST
Note You need to log in before you can comment on or make changes to this bug.